feat(smac): :sparkles: Initial Commit
with already usable state

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<app-nx-welcome></app-nx-welcome> <router-outlet></router-outlet>
+<div class="h-full">
+    <app-app-header></app-app-header>
+    <div class="h-[84%] p-3 bg-gray-800">
+        <router-outlet></router-outlet>
+    </div>
+    <app-app-footer></app-app-footer>
+</div>
