--- a/src/app/application/features/login/login.component.html
+++ b/src/app/application/features/login/login.component.html
@@ -7,7 +7,7 @@
        <div class="flex flex-col">
         <mat-form-field>
             <mat-label>Username</mat-label>
-            <input matInput type="text">
+            <input matInput [formControl]="usernameControl" type="text">
         </mat-form-field>
 
         <mat-form-field>
