--- a/src/app/application/scaffold/app-footer/app-footer.component.html
+++ b/src/app/application/scaffold/app-footer/app-footer.component.html
@@ -1,7 +1,8 @@
 <div class="h-[8%] bg-gray-900 flex justify-around">
 
     <div class="flex-1 flex justify-center items-center">
-        <mat-icon class="text-white">help</mat-icon>
+        <app-trigger-favorites-list></app-trigger-favorites-list>
+        <app-trigger-cocktail-list></app-trigger-cocktail-list>
     </div>
     <div class="flex-1 flex justify-center items-center">
         <button mat-raised-button aria-label="Example icon button with a home icon">
