--- a/src/app/application/features/cocktails/cocktails.component.html
+++ b/src/app/application/features/cocktails/cocktails.component.html
@@ -1,9 +1,10 @@
-<div class="h-full">
+<div class="h-full flex flex-col gap-4">
   <div class="w-fit m-auto text-white text-2xl">{{cocktailSource$ | async}}</div>
-  <div class="min-w-[250px]  w-fit m-auto flex flex-col gap-4 overflow-scroll  no-scrollbar
+  <div class="h-full min-w-[250px] w-fit m-auto flex flex-col gap-4 overflow-scroll  no-scrollbar
   ">
-    <div></div>
+    
     <app-cocktail *ngFor="let cocktail of cocktails$ | async" [cocktail]="cocktail" [isFavorized]="isFavorized(cocktail)"
       (favorized)="onFavorizedToggle(cocktail, $event)" (added)="addCocktailToCart(cocktail)"></app-cocktail>
+
   </div>
 </div>
