--- a/src/app/application/features/login/login.component.html
+++ b/src/app/application/features/login/login.component.html
@@ -1,26 +1,28 @@
-<mat-card class=" m-auto max-w-md">
-    <mat-card-header>
-        <mat-card-title>Login</mat-card-title>
-        <mat-card-subtitle>Enter your name and your role</mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-content >
-       <div class="flex flex-col">
-        <mat-form-field>
-            <mat-label>Username</mat-label>
-            <input matInput [formControl]="usernameControl" type="text">
-        </mat-form-field>
-
-        <mat-form-field>
-            <mat-label>Role</mat-label>
-            <mat-select [formControl]="roleControl">
-                <mat-option *ngFor="let role of roles | keyvalue" [value]="role.value">{{role.value}}</mat-option>
-            </mat-select>
-        </mat-form-field>
-       </div>
-        
-
-    </mat-card-content>
-    <mat-card-actions class="flex w-full justify-center">
-        <button mat-raised-button color="primary" (click)="login()">Login</button>
-    </mat-card-actions>
-</mat-card>
+<div class="h-full w-fit m-auto flex flex-col justify-center">
+    <mat-card>
+        <mat-card-header>
+            <mat-card-title>Login</mat-card-title>
+            <mat-card-subtitle>Enter your name and your role</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content >
+           <div class="flex flex-col">
+            <mat-form-field>
+                <mat-label>Username</mat-label>
+                <input matInput [formControl]="usernameControl" type="text">
+            </mat-form-field>
+    
+            <mat-form-field>
+                <mat-label>Role</mat-label>
+                <mat-select [formControl]="roleControl">
+                    <mat-option *ngFor="let role of roles | keyvalue" [value]="role.value">{{role.value}}</mat-option>
+                </mat-select>
+            </mat-form-field>
+           </div>
+            
+    
+        </mat-card-content>
+        <mat-card-actions class="flex w-full justify-center">
+            <button mat-raised-button color="primary" (click)="login()">Login</button>
+        </mat-card-actions>
+    </mat-card>
+</div>
