refactor(smac): reorder footer and header components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="h-full">
-    <app-app-header></app-app-header>
+    <app-header></app-header>
     <div class="h-[84%] p-3 bg-gray-800">
         <router-outlet></router-outlet>
     </div>
-    <app-app-footer></app-app-footer>
+    <app-footer></app-footer>
 </div>
