--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<div class="h-full">
-    <app-header></app-header>
-    <div class="h-[84%] p-3 bg-gray-800">
+<div class="h-full flex flex-col ">
+    <app-header class="basis-14 shrink-0 grow"></app-header>
+    <div class="overflow-scroll bg-gray-800 grow-[2]">
         <router-outlet></router-outlet>
     </div>
-    <app-footer></app-footer>
+    
 </div>
