--- a/src/app/application/features/cocktails/cocktails.component.html
+++ b/src/app/application/features/cocktails/cocktails.component.html
@@ -1,10 +1,27 @@
-<div class="h-full w-full flex flex-col gap-4 items-center">
-  <span class="text-white text-2xl">{{cocktailSource$ | async}}</span>
-  <div class=" min-w-[300px] flex flex-col gap-4 overflow-scroll  no-scrollbar
-  ">
-    
-    <app-cocktail *ngFor="let cocktail of cocktails$ | async" [cocktail]="cocktail" [isFavorized]="isFavorized(cocktail)"
-      (favorized)="onFavorizedToggle(cocktail, $event)" (added)="addCocktailToCart(cocktail)"></app-cocktail>
-
+<div class="h-full flex flex-col">
+  <div class="w-full flex flex-col gap-4 items-center overflow-scroll p-4">
+    <span class="text-white text-2xl">{{cocktailSource$ | async}}</span>
+    <div class=" min-w-[300px] flex flex-col gap-4 overflow-scroll  no-scrollbar
+    ">
+      
+      <app-cocktail *ngFor="let cocktail of cocktails$ | async" [cocktail]="cocktail" [isFavorized]="isFavorized(cocktail)"
+        (favorized)="onFavorizedToggle(cocktail, $event)" (added)="addCocktailToCart(cocktail)"></app-cocktail>
+  
+    </div>
+  </div>
+  <div class="basis-14 shrink-0 bg-gray-900 flex justify-around grow">
+  
+    <div class="flex-1 flex justify-center items-center">
+        <app-trigger-favorites-list></app-trigger-favorites-list>
+        <app-trigger-cocktail-list></app-trigger-cocktail-list>
+    </div>
+    <div class="flex-1 flex justify-center items-center">
+        <button mat-raised-button aria-label="Example icon button with a home icon">
+            Order Now
+        </button>
+    </div>
+    <div class="flex-1 flex justify-center items-center">
+        <app-cart></app-cart>
+    </div>
   </div>
 </div>
