--- a/src/app/application/features/header/header.component.html
+++ b/src/app/application/features/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col h-[8%] bg-gray-900 items-center justify-center">
+<div class="flex flex-col h-full bg-gray-900 items-center justify-center">
     <p class="text-xl font-light text-white">
         Serve Me A Cocktail
     </p>
