feat(smac): add logout component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="h-full flex flex-col ">
-    <app-header class="basis-14 shrink-0 grow"></app-header>
-    <div class="overflow-scroll bg-gray-800 grow-[2]">
+    <app-header class="basis-14 shrink-0"></app-header>
+    <div class="overflow-scroll bg-gray-800 grow">
         <router-outlet></router-outlet>
     </div>
     
