--- a/src/app/application/features/trigger-cocktail-list/trigger-cocktail-list.component.html
+++ b/src/app/application/features/trigger-cocktail-list/trigger-cocktail-list.component.html
@@ -1,3 +1,3 @@
-<button mat-icon-button (click)="loadAllCocktails()">
-    <mat-icon class="text-white">list </mat-icon>
+<button mat-icon-button (click)="loadAllCocktails()"  [disabled]="isCocktailSourceAll$ | async">
+    <mat-icon class="text-white" [ngClass]="{'text-gray-600': (isCocktailSourceAll$ | async)}">list </mat-icon>
 </button>
