--- a/src/app/shared/components/order/order.component.html
+++ b/src/app/shared/components/order/order.component.html
@@ -1,4 +1,4 @@
-<div class="solid max-w-lg rounded-r-2xl border-l-8 border-caramel bg-yellow-600/75 p-2 flex justify-between gap-4">
+<div class="min-w-[300px] rounded-r-2xl border-l-8 border-caramel bg-yellow-600/75 p-2 flex justify-between gap-4">
   <div>
     <p class="font-normal text-white text-xl">{{order.cocktail.name}}</p>
     <p class="text-white">{{order.user.name}}</p>
@@ -13,4 +13,4 @@
     <button mat-icon-button (click)="onDone()"><mat-icon class="text-green-500">done
       </mat-icon></button>
   </div>
-</div>
+</div> 
