--- a/src/app/application/features/header/header.component.html
+++ b/src/app/application/features/header/header.component.html
@@ -1,4 +1,4 @@
-<div class=" h-full bg-gray-900 flex items-center justify-between">
+<div class=" h-full  flex items-center justify-between">
     <div class="flex-1 flex justify-center"></div>
     <div class="flex-1 flex-grow-[2] flex justify-center">
         <p class="text-xl font-light text-white ">
