--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
-<div class="h-full flex flex-col ">
-    <app-header class="basis-14 shrink-0"></app-header>
-    <div class="overflow-scroll bg-gray-800 grow">
+<app-scaffold>
+    <div app-content class="h-full">
         <router-outlet></router-outlet>
     </div>
-    
-</div>
+</app-scaffold>
