--- a/src/app/application/features/cocktails/cocktails.component.html
+++ b/src/app/application/features/cocktails/cocktails.component.html
@@ -3,25 +3,36 @@
     <span class="text-white text-2xl">{{cocktailSource$ | async}}</span>
     <div class=" min-w-[300px] flex flex-col gap-4 overflow-scroll  no-scrollbar
     ">
-      
-      <app-cocktail *ngFor="let cocktail of cocktails$ | async" [cocktail]="cocktail" [isFavorized]="isFavorized(cocktail)"
-        (favorized)="onFavorizedToggle(cocktail, $event)" (added)="addCocktailToCart(cocktail)"></app-cocktail>
-  
+
+      <app-cocktail *ngFor="let cocktail of cocktails$ | async" [cocktail]="cocktail"
+        [isFavorized]="isFavorized(cocktail)" (favorized)="onFavorizedToggle(cocktail, $event)"
+        (added)="addCocktailToCart(cocktail)"></app-cocktail>
+
     </div>
   </div>
-  <div class="basis-14 shrink-0 bg-gray-900 flex justify-around items-center">
-  
-    <div class="flex-1 flex justify-center">
-        <app-trigger-favorites-list></app-trigger-favorites-list>
-        <app-trigger-cocktail-list></app-trigger-cocktail-list>
-    </div>
-    <div class="flex-1 flex justify-center">
-        <button mat-raised-button>
-            Order Now
-        </button>
-    </div>
-    <div class="flex-1 flex justify-center">
-        <app-cart></app-cart>
-    </div>
-  </div>
+
 </div>
+
+
+<ng-container *cdkPortal>
+  <div class="flex items-center h-[8vh]">
+    <div class="flex-1 flex justify-center ">
+      <app-trigger-favorites-list></app-trigger-favorites-list>
+      <app-trigger-cocktail-list></app-trigger-cocktail-list>
+    </div>
+  
+    <div class="flex-1 flex justify-center">
+      <button mat-raised-button>
+        Order Now
+      </button>
+    </div>
+    
+    <div class="flex-1 flex justify-center">
+      <app-cart></app-cart>
+    </div>
+  </div>
+</ng-container>
+
+<ng-container *cdkPortal #test>
+  TEST
+</ng-container>
