feat(smac): :tada: a lot
project renaming; style refactoring; scaffold reworked

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <app-scaffold>
-    <div app-content class="h-full">
+    <div app-header>
+        
+    </div>
+    <div app-footer></div>
+    <div app-content>
         <router-outlet></router-outlet>
     </div>
 </app-scaffold>
