--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
 <app-scaffold>
-    <div app-header>
-        
+    <div app-header class="h-full">
+        <app-header></app-header>
     </div>
-    <div app-footer></div>
-    <div app-content>
+    <div app-content class="h-full">
         <router-outlet></router-outlet>
     </div>
 </app-scaffold>
