--- a/src/app/application/features/logout/logout.component.html
+++ b/src/app/application/features/logout/logout.component.html
@@ -1,5 +1,5 @@
 <div class="flex-1 flex justify-center">
     <button mat-icon-button (click)="logout()">
-        <mat-icon class="text-white">logout</mat-icon>
+        <mat-icon class="">logout</mat-icon>
     </button>
 </div>
