feat(smac): integrate be

--- a/src/app/application/features/login/login.component.html
+++ b/src/app/application/features/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="h-full w-fit m-auto">
+<div class="h-full w-fit py-[10%] m-auto">
     <mat-card class="flex flex-col items-center">
         <mat-card-header>
             <mat-card-title>Login</mat-card-title>
