--- a/src/app/application/features/orders/orders.component.html
+++ b/src/app/application/features/orders/orders.component.html
@@ -6,11 +6,9 @@
             (rejected)="onOrderRejected(order)"></app-order>
 
     </div>
-</div>
+    
 
-
-<ng-container *cdkPortal>
-    <div class="basis-14 shrink-0 bg-gray-900 flex justify-around items-center">
+    <div class="basis-[10%] shrink-0 flex justify-around items-center bg-neutral-lite dark:bg-neutral-dark">
 
         <div class="flex-1 flex justify-center">
             <button mat-icon-button class="onEditCocktails()">
@@ -18,4 +16,6 @@
             </button>
         </div>
     </div>
-</ng-container>
+
+</div>
+
