--- a/src/app/application/features/cocktails/cocktails.component.html
+++ b/src/app/application/features/cocktails/cocktails.component.html
@@ -1,5 +1,5 @@
 <div class="h-full flex flex-col pt-4">
-  <div class=" text-center basis-[5%] text-white  text-2xl border-b border-b-accent-lite dark:border-b-accent-dark">{{cocktailSource$ | async}}</div>
+  <div class=" text-center basis-[5%] text-white  text-2xl">{{cocktailSource$ | async}}</div>
  
   <div
     class="flex flex-col basis-[85%] self-center items-stretch overflow-scroll no-scrollbar p-4 gap-4  ">
@@ -8,7 +8,7 @@
       (added)="addCocktailToCart(cocktail)"></app-cocktail>
   </div>
 
-  <div class="flex items-center self-stretch basis-[10%] border-t border-t-accent-lite dark:border-t-accent-dark">
+  <div class="flex items-center self-stretch basis-[10%] bg-neutral-lite dark:bg-neutral-dark">
     <div class="flex-1 flex justify-center ">
       <app-trigger-favorites-list></app-trigger-favorites-list>
       <app-trigger-cocktail-list></app-trigger-cocktail-list>
