--- a/src/app/shared/components/cocktail/cocktail.component.html
+++ b/src/app/shared/components/cocktail/cocktail.component.html
@@ -1,7 +1,7 @@
-<div class="flex flex-col max-w-[300px] m-1 rounded-xl border border-accent-lite dark:border-accent-dark  bg-neutral-lite dark:bg-neutral-dark">
-  <img class="w-full rounded-t-xl" *ngIf="imgSrc" [src]="imgSrc" alt="cocktail-image">
-  <div id="content" class="p-2   dark:text-white rounded-xl border border-accent-lite dark:border-accent-dark">
-      <p class="text-xl font-semibold">{{cocktail.name}}</p>
+<div class="flex flex-col max-w-[300px] m-1 rounded-xl border border-secondary-lite dark:border-secondary-dark  bg-neutral-lite dark:bg-neutral-dark">
+  <img class="w-full rounded-t-xl" *ngIf="imgSrc" [src]="imgSrc" alt="cocktail-image" >
+  <div id="content" class="p-2   dark:text-white rounded-xl">
+      <p class="text-2xl">{{cocktail.name}}</p>
       <p class="text-base font-normal">Ingredients</p>
       <div class="flex flex-wrap my-2">
           <span class="rounded-full text-xs bg-primary-lite dark:bg-primary-dark m-1 px-2 py-1" *ngFor="let ingredient of cocktail.ingredients">
@@ -10,6 +10,10 @@
       </div>
       <div class=" w-[95%] m-auto mt-5 mb-2 border-t-2 border-white rounded"></div>
       <div class="flex justify-center gap-4  mx-1 ">
+        <button mat-icon-button (click)="toggleFavorized()"><mat-icon class="transition-all"
+            [ngClass]="{'text-red-600': isFavorized, 'text-gray-600' : !isFavorized} ">favorite</mat-icon></button>
+        <button mat-icon-button (click)="onAdded()"><mat-icon>add</mat-icon></button>
+  
       </div>
   </div>
 </div>
