feat(smac): crazy features

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<app-scaffold>
+<app-scaffold-app>
     <div app-header class="h-full">
         <app-header></app-header>
     </div>
     <div app-content class="h-full">
         <router-outlet></router-outlet>
     </div>
-</app-scaffold>
+</app-scaffold-app>
