--- a/src/app/shared/components/logout/logout.component.html
+++ b/src/app/shared/components/logout/logout.component.html
@@ -1,5 +1,5 @@
 <div class="flex-1 flex justify-center">
     <button mat-icon-button (click)="logout()">
-        <mat-icon class="">logout</mat-icon>
+        <mat-icon class="text-accent-lite dark:text-accent-dark">logout</mat-icon>
     </button>
 </div>
