--- a/src/app/shared/components/scaffold-app/scaffold-app.component.html
+++ b/src/app/shared/components/scaffold-app/scaffold-app.component.html
@@ -1,8 +1,8 @@
 <div class="bg-default-lite dark:bg-default-dark h-full">
-    <div class="h-[8%] bg-neutral-lite dark:bg-neutral-dark">
+    <div class="h-[10%] bg-neutral-lite dark:bg-neutral-dark">
         <ng-content select="[app-header]"></ng-content>
     </div>
-    <div class="h-[92%] overflow-clip" >
+    <div class="h-[90%] overflow-auto" >
         <ng-content class="h-full" select="[app-content]"></ng-content>
     </div>
 </div>
