--- a/src/app/shared/components/cocktail/cocktail.component.html
+++ b/src/app/shared/components/cocktail/cocktail.component.html
@@ -4,7 +4,7 @@
       <p class="text-2xl">{{cocktail.name}}</p>
       <p class="text-base font-normal">Ingredients</p>
       <div class="flex flex-wrap my-2">
-          <span class="rounded-full text-xs bg-primary-lite dark:bg-primary-dark m-1 px-2 py-1" *ngFor="let ingredient of cocktail.ingredients">
+          <span class="rounded-full text-xs bg-accent-lite dark:bg-accent-dark m-1 px-2 py-1" *ngFor="let ingredient of cocktail.ingredients">
               {{ingredient}}
           </span>
       </div>
