--- a/src/app/shared/components/login/login.component.html
+++ b/src/app/shared/components/login/login.component.html
@@ -22,7 +22,10 @@
     
         </mat-card-content>
         <mat-card-actions>
-            <app-button (clicked)="login()" [label]="'Login'"></app-button>
+            
+            <button class="bg-primary-lite dark:bg-primary-dark hover:bg-primary-lite/90 hover:dark:bg-primary-dark/90 py-2 px-3 rounded-sm text-sm text-black dark:text-white font-medium shadow-sm shadow-black/30" (click)="login()">
+                Login
+            </button>
         </mat-card-actions>
         
     </mat-card>
