--- a/src/app/shared/components/scaffold-app/scaffold-app.component.html
+++ b/src/app/shared/components/scaffold-app/scaffold-app.component.html
@@ -1,4 +1,4 @@
-<div class="bg-default-lite dark:bg-default-dark h-full">
+<div class="h-full">
     <div class="h-[10%] bg-neutral-lite dark:bg-neutral-dark">
         <ng-content select="[app-header]"></ng-content>
     </div>
