--- a/src/app/application/features/guest/guest.component.html
+++ b/src/app/application/features/guest/guest.component.html
@@ -2,7 +2,11 @@
     <div content class="h-full">
         <router-outlet></router-outlet>
     </div>
-    <div sidenav>
+    <div sidenav class="flex flex-col h-full justify-center items-center gap-4">
         <app-logout></app-logout>
+
+        <button *ngFor="let route of guestRoutes" (click)="navigate(route.path)" class="min-w-min w-1/3 max-w-xs bg-primary-lite  dark:bg-primary-dark hover:bg-primary-lite/90 hover:dark:bg-primary-dark/90 py-2 px-3 rounded-sm text-sm text-black dark:text-white font-medium shadow-sm shadow-black/30" >
+            {{route.label}}
+        </button>
     </div>
 </app-scaffold-content>
