--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,7 +1,12 @@
 <div class="flex h-full">
-    <div class="w-[25%] h-full flex "></div>
+    <div class="w-[25%] h-full flex justify-start items-center pl-2">
+        <div *ngIf="isLoggedIn$ | async" class="dark:text-white text-xs">
+            <div>{{userName$ | async}}</div>
+            <div class="opacity-50">{{userRole$ | async}}</div>
+        </div>
+    </div>
     <div class="w-[50%] h-full flex justify-center items-center text-lg dark:text-white">Serve Me A Cocktail</div>
-    <div class="w-[25%] h-full flex justify-center items-center">
+    <div class="w-[25%] h-full flex justify-end items-center pr-2">
         <button *ngIf="isLoggedIn$ | async" (click)="toggleSidenav()">
             <i class="fa fa-bars  text-accent-lite dark:text-accent-dark"></i>
         </button>
