--- a/src/app/shared/components/scaffold-content/scaffold-content.component.html
+++ b/src/app/shared/components/scaffold-content/scaffold-content.component.html
@@ -1,6 +1,6 @@
 <div class="h-full flex flex-col relative overflow-hidden">
     <ng-content class="h-full" select="[content]"></ng-content>
-    <div class="overflow-x-hidden bg-neutral-lite/80 dark:bg-neutral-lite/95 absolute top-0 w-full transition-all h-full "
+    <div class="bg-neutral-lite/80 dark:bg-neutral-lite/95 absolute top-0 w-full transition-all h-full "
         [ngClass]="(isToggled$ | async) ? 'left-0' : 'left-[100%]'">
 
         <ng-content select="[sidenav]"></ng-content>
